--- a/root/backend/pom.xml
+++ b/root/backend/pom.xml
@@ -11,6 +11,7 @@
 	<groupId>com.redscooter</groupId>
 	<artifactId>api</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
+	<packaging>jar</packaging>
 	<name>api</name>
 	<description>RedScooter SpringBoot API - Build by Epoka University Students as part of SWE302 course</description>
 	<properties>
@@ -113,6 +114,7 @@
 	</dependencies>
 
 	<build>
+		<finalName>api</finalName>
 		<plugins>
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
