--- a/root/docker-compose.yml
+++ b/root/docker-compose.yml
@@ -1,23 +1,27 @@
 version: "3.8"
 services:
-
+# TODO RESTART ON FALIURE
   webserver:
     image: nginx
     volumes:
       - ./nginx.conf:/etc/nginx/conf.d/default.conf
-      - ./out/html:/var/www/html
+      - ./frontend/out/html:/var/www/html
     ports:
     - "80:80"
 
-  # backend:
-  #   image: plone/plone-backend:6.0
-  #   environment:
-  #     SITE: Plone
-  #     RELSTORAGE_DSN: "dbname='plone' user='plone' host='db' password='plone'"
-  #   ports:
-  #   - "8080:8080"
-  #   depends_on:
-  #     - db
+  backend:
+    image: root.backend.api:8080/api:latest
+    # environment:
+    #   SITE: Plone
+    #   RELSTORAGE_DSN: "dbname='plone' user='plone' host='db' password='plone'"
+    ports:
+    - "8080:8080"
+    depends_on:
+      - db
+    links:
+      - db
+    extra_hosts:
+        - "host.docker.internal:host-gateway"
 
   db:
     image: postgres
@@ -30,9 +34,3 @@ services:
     ports:
     - "5432:5432"
     command: postgres -c listen_addresses='*' # todo removes this and use network config
-
-# networks:
-#   frontend:
-#   backend:
-#     driver: overlay
-#     attachable: true
