--- a/root/nginx.conf
+++ b/root/nginx.conf
@@ -26,7 +26,7 @@ server {
                 proxy_set_header X-Real-IP $remote_addr;
                 proxy_set_header X-Forwarded-Proto $scheme;
                 proxy_redirect http:// https://;
-                proxy_pass "http://127.0.0.1:8080/api";
+                proxy_pass "http://backend:8080/api";
                 client_max_body_size 5M;
         }
         location /api/admin {
@@ -36,7 +36,7 @@ server {
                 proxy_set_header X-Real-IP $remote_addr;
                 proxy_set_header X-Forwarded-Proto $scheme;
                 proxy_redirect http:// https://;
-                proxy_pass "http://127.0.0.1:8080/api/admin";
+                proxy_pass "http://backend:8080/api/admin";
         }
         location /api-docs {
                 proxy_set_header X-Forwarded-For $remote_addr;
@@ -44,7 +44,7 @@ server {
                 proxy_set_header X-Real-IP $remote_addr;
                 proxy_set_header X-Forwarded-Proto $scheme;
                 proxy_redirect http:// https://;
-                proxy_pass "http://127.0.0.1:8080/api-docs";
+                proxy_pass "http://backend:8080/api-docs";
         }
         location /resources {
                 proxy_set_header X-Forwarded-For $remote_addr;
@@ -52,7 +52,7 @@ server {
                 proxy_set_header X-Real-IP $remote_addr;
                 proxy_set_header X-Forwarded-Proto $scheme;
                 proxy_redirect http:// https://;
-                proxy_pass "http://127.0.0.1:8080/resources";
+                proxy_pass "http://backend:8080/resources";
         }
 
         error_page 404 /404.html;
