--- a/root/docker-compose.yml
+++ b/root/docker-compose.yml
@@ -1,36 +1,46 @@
-version: "3.8"
+version: '3.8'
+
 services:
 # TODO RESTART ON FALIURE
   webserver:
     image: nginx
     volumes:
       - ./nginx.conf:/etc/nginx/conf.d/default.conf
-      - ./frontend/out/html:/var/www/html
+      - ./frontend/out/:/var/www/html
     ports:
     - "80:80"
+    links:
+      - backend
 
   backend:
     image: root.backend.api:8080/api:latest
-    # environment:
-    #   SITE: Plone
-    #   RELSTORAGE_DSN: "dbname='plone' user='plone' host='db' password='plone'"
+    environment:
+      DATABASE_HOST: db
+      DATABASE_PORT: 5432
     ports:
-    - "8080:8080"
-    depends_on:
-      - db
+      - "8080:8080"
     links:
       - db
-    extra_hosts:
-        - "host.docker.internal:host-gateway"
+    depends_on:
+      db:
+        condition: service_healthy
 
   db:
     image: postgres
     environment:
-      POSTGRES_USER: admin
+      POSTGRES_USER: &pg_user admin
+      PGUSER: *pg_user
       POSTGRES_PASSWORD: admin
-      POSTGRES_DB: redscooter
+      POSTGRES_DB: &pg_database redscooter
+      PGDATABASE: *pg_database
     volumes:
     - ./postgres-data:/var/lib/postgresql/data
     ports:
     - "5432:5432"
     command: postgres -c listen_addresses='*' # todo removes this and use network config
+    healthcheck:
+      test: ["CMD-SHELL", "pg_isready"]
+      interval: 10s
+      timeout: 5s
+      retries: 5
+      start_period: 0s
