--- a/frontend/package.json
+++ b/frontend/package.json
@@ -5,17 +5,25 @@
   "scripts": {
     "dev": "openapi -i services.yaml -o src/services && next dev",
     "build": "next build",
-    "start": "next start",  
+    "start": "next start",
     "lint": "next lint",
     "export": "openapi -i services.yaml -o src/services && next build && next export"
   },
   "dependencies": {
+    "@emotion/react": "^11.10.6",
+    "@emotion/styled": "^11.10.6",
+    "@mui/icons-material": "^5.11.16",
+    "@mui/material": "^5.11.16",
+    "@mui/x-data-grid": "^6.1.0",
+    "@mui/x-data-grid-generator": "^6.1.0",
     "@reduxjs/toolkit": "^1.9.3",
     "@types/node": "18.15.11",
     "@types/react": "18.0.32",
     "@types/react-dom": "18.0.11",
+    "@types/uuid": "^9.0.1",
     "eslint": "8.37.0",
     "eslint-config-next": "13.2.4",
+    "material-react-table": "^1.10.0",
     "next": "13.2.4",
     "next-redux-wrapper": "^8.1.0",
     "openapi-typescript": "^6.2.1",
