configured openapi documentation, working a bit more on deployment scripts

--- a/production/nginx.conf
+++ b/production/nginx.conf
@@ -25,7 +25,7 @@ server {
                 proxy_set_header Host $http_host;
                 proxy_set_header X-Real-IP $remote_addr;
                 proxy_set_header X-Forwarded-Proto $scheme;
-                proxy_redirect http:// https://;
+                # proxy_redirect http:// https://;
                 proxy_pass "http://backend:8080/api";
                 client_max_body_size 5M;
         }
@@ -35,7 +35,7 @@ server {
                 proxy_set_header Host $http_host;
                 proxy_set_header X-Real-IP $remote_addr;
                 proxy_set_header X-Forwarded-Proto $scheme;
-                proxy_redirect http:// https://;
+                # proxy_redirect http:// https://;
                 proxy_pass "http://backend:8080/api/admin";
         }
         location /api-docs {
@@ -43,7 +43,7 @@ server {
                 proxy_set_header Host $http_host;
                 proxy_set_header X-Real-IP $remote_addr;
                 proxy_set_header X-Forwarded-Proto $scheme;
-                proxy_redirect http:// https://;
+                # proxy_redirect http:// https://;
                 proxy_pass "http://backend:8080/api-docs";
         }
         location /resources {
@@ -51,7 +51,7 @@ server {
                 proxy_set_header Host $http_host;
                 proxy_set_header X-Real-IP $remote_addr;
                 proxy_set_header X-Forwarded-Proto $scheme;
-                proxy_redirect http:// https://;
+                # proxy_redirect http:// https://;
                 proxy_pass "http://backend:8080/resources";
         }
 
