--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,11 +16,13 @@
     "@mui/material": "^5.11.16",
     "@mui/x-data-grid": "^6.1.0",
     "@mui/x-data-grid-generator": "^6.1.0",
+    "@mui/x-date-pickers": "^6.5.0",
     "@reduxjs/toolkit": "^1.9.3",
     "@types/node": "18.15.11",
     "@types/react": "18.0.32",
     "@types/react-dom": "18.0.11",
     "@types/uuid": "^9.0.1",
+    "dayjs": "^1.11.7",
     "eslint": "8.37.0",
     "eslint-config-next": "13.2.4",
     "material-react-table": "^1.10.0",
