refactored deployment scripts, env variables for docker, fixed exception handling for restprocessors, changed security filters and swagger endpoints, refactored nginx config, removed trailing slashes from endpoints.

--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -147,7 +147,7 @@
         <dependency>
             <groupId>grad-project.indritbreti</groupId>
             <artifactId>restprocessors</artifactId>
-            <version>0.0.8-SNAPSHOT</version>
+            <version>0.0.15-SNAPSHOT</version>
             <scope>compile</scope>
         </dependency>
     </dependencies>
@@ -194,11 +194,11 @@
                             <artifactId>lombok</artifactId>
                             <version>${lombok.version}</version>
                         </path>
-                        <path>
-                            <groupId>grad-project.indritbreti</groupId>
-                            <artifactId>restprocessors</artifactId>
-                            <version>0.0.8-SNAPSHOT</version>
-                        </path>
+<!--                        <path>-->
+<!--                            <groupId>grad-project.indritbreti</groupId>-->
+<!--                            <artifactId>restprocessors</artifactId>-->
+<!--                            <version>0.0.15-SNAPSHOT</version>-->
+<!--                        </path>-->
                     </annotationProcessorPaths>
                     <!--                    <annotationProcessors>-->
                     <!--                        <annotationProcessor>-->
