--- a/production/nginx.conf
+++ b/production/nginx.conf
@@ -23,31 +23,15 @@ http {
                 location / {
                         try_files $uri.html $uri $uri/ homepage.html index.html;
                 }
+
                 location /api {
                         proxy_set_header X-Forwarded-For $remote_addr;
                         proxy_set_header Host $http_host;
                         proxy_set_header X-Real-IP $remote_addr;
                         proxy_set_header X-Forwarded-Proto $scheme;
                         # proxy_redirect http:// https://;
-                        proxy_pass "http://backend:8080/api";
+                        proxy_pass "http://backend:${BACKEND_PORT}/api";
                         client_max_body_size 5M;
-                }
-                location /api/admin {
-                        client_max_body_size 150M;
-                        proxy_set_header X-Forwarded-For $remote_addr;
-                        proxy_set_header Host $http_host;
-                        proxy_set_header X-Real-IP $remote_addr;
-                        proxy_set_header X-Forwarded-Proto $scheme;
-                        # proxy_redirect http:// https://;
-                        proxy_pass "http://backend:8080/api/admin";
-                }
-                location /api-docs {
-                        proxy_set_header X-Forwarded-For $remote_addr;
-                        proxy_set_header Host $http_host;
-                        proxy_set_header X-Real-IP $remote_addr;
-                        proxy_set_header X-Forwarded-Proto $scheme;
-                        # proxy_redirect http:// https://;
-                        proxy_pass "http://backend:8080/api-docs";
                 }
 
                 location $RESOURCES_ROOT_URI {
