--- a/production/docker-compose.yml
+++ b/production/docker-compose.yml
@@ -7,12 +7,13 @@ services:
       NGINX_ENVSUBST_OUTPUT_DIR: /etc/nginx
       RESOURCES_ROOT_PATH: &resources_root_path_ ${RESOURCES_ROOT_PATH:-/resources/}
       RESOURCES_ROOT_URI: &resources_root_uri_ ${RESOURCES_ROOT_URI:-/resources/}
+      BACKEND_PORT: ${BACKEND_PORT:-8080}
     volumes:
       # - ./nginx.conf:/etc/nginx/conf.d/default.conf
       - ./nginx.conf:/etc/nginx/templates/nginx.conf.template
       - ./target/html/:/var/www/html
     ports:
-    - "8002:80"
+    - "80:80"
     restart: always
 
   db:
@@ -21,12 +22,12 @@ services:
       POSTGRES_USER: &db_user ${DATABASE_USER:-admin}
       PGUSER: *db_user
       POSTGRES_PASSWORD: &db_password ${DATABASE_PASSWORD:-admin}
-      POSTGRES_DB: &db_database redscooter
+      POSTGRES_DB: &db_database ${DATABASE_NAME:-postgres}
       PGDATABASE: *db_database
     volumes:
     - ${DATABASE_VOLUME:-./database-data}:/var/lib/postgresql/data
     ports:
-    - "5432:5432"
+    - "${DATABASE_PORT:-5432}:5432"
     command: postgres -c listen_addresses='*' 
     restart: always
     healthcheck:
@@ -45,14 +46,15 @@ services:
       - ./target/resources:/root/resources
     environment:
       DATABASE_HOST: db
-      DATABASE_PORT: 5432
+      DATABASE_PORT: ${DATABASE_PORT:-5432}
       DATABASE_USER: *db_user
       DATABASE_PASSWORD: *db_password
+      SMTP_USERNAME: ${SMTP_USERNAME}
       SMTP_PASSWORD: ${SMTP_PASSWORD}
       JWT_SECRET: ${JWT_SECRET}
     command: "java -jar api.jar --spring.config.location=file:///application.yml"
     ports:
-      - "8080:8080"
+      - "${BACKEND_PORT:-8080}:8080"
     depends_on:
       db:
         condition: service_healthy
