added support for images

--- a/production/nginx.conf
+++ b/production/nginx.conf
@@ -34,9 +34,9 @@ http {
                         client_max_body_size 5M;
                 }
 
-                location $RESOURCES_ROOT_URI {
-                        rewrite ^/$RESOURCES_ROOT_URI(.*)$ $1 break;
-                        root $RESOURCES_ROOT_PATH;
+                location $FILE_STORE_PUBLIC_ROOT_URI {
+                        rewrite ^$FILE_STORE_PUBLIC_ROOT_URI(.*)$ $1 break;
+                        root $FILE_STORE_PUBLIC_ROOT_PATH;
                         try_files $uri $uri/ =404;
                 }
 
