--- a/backend/src/main/resources/application.yml
+++ b/backend/src/main/resources/application.yml
@@ -85,6 +85,9 @@ email:
     auth: true
     starttls: true
 
-#FileStore:
-
+file-store:
+    root-path: ${FILE_STORE_ROOT_PATH:/filestore}
+    public-root-path: ${FILE_STORE_PUBLIC_ROOT_PATH:/filestore/public}
+    no-image-relative-path: /images/no_image.jpg
+    max-number-of-sub-directories: 30000;
 
