--- a/production/docker-compose.yml
+++ b/production/docker-compose.yml
@@ -5,13 +5,14 @@ services:
     image: nginx
     environment:
       NGINX_ENVSUBST_OUTPUT_DIR: /etc/nginx
-      RESOURCES_ROOT_PATH: &resources_root_path_ ${RESOURCES_ROOT_PATH:-/resources/}
-      RESOURCES_ROOT_URI: &resources_root_uri_ ${RESOURCES_ROOT_URI:-/resources/}
+      FILE_STORE_PUBLIC_ROOT_PATH: /filestore/public
+      FILE_STORE_PUBLIC_ROOT_URI: ${FILE_STORE_PUBLIC_ROOT_URI:-/resources/public}
       BACKEND_PORT: ${BACKEND_PORT:-8080}
     volumes:
       # - ./nginx.conf:/etc/nginx/conf.d/default.conf
       - ./nginx.conf:/etc/nginx/templates/nginx.conf.template
       - ./target/html/:/var/www/html
+      - ${FILE_STORE_PUBLIC_ROOT_PERSIST_PATH}:/filestore/public
     ports:
     - "80:80"
     restart: always
@@ -40,10 +41,6 @@ services:
 
   backend:
     image: eclipse-temurin:17
-    volumes:
-      - ./target/api.jar:/api.jar
-      - ./target/application.yml:/application.yml
-      - ./target/resources:/root/resources
     environment:
       DATABASE_HOST: db
       DATABASE_PORT: ${DATABASE_PORT:-5432}
@@ -52,6 +49,15 @@ services:
       SMTP_USERNAME: ${SMTP_USERNAME}
       SMTP_PASSWORD: ${SMTP_PASSWORD}
       JWT_SECRET: ${JWT_SECRET}
+      RESOURCES_ROOT_PATH: /resources
+      FILE_STORE_ROOT_PATH: /filestore
+      FILE_STORE_PUBLIC_ROOT_PATH: /filestore/public
+    volumes:
+      - ./target/api.jar:/api.jar
+      - ./target/application.yml:/application.yml
+      - ./target/resources:/resources
+      - ${FILE_STORE_ROOT_PERSIST_PATH}:/filestore
+      - ${FILE_STORE_PUBLIC_ROOT_PERSIST_PATH}:/filestore/public
     command: "java -jar api.jar --spring.config.location=file:///application.yml"
     ports:
       - "${BACKEND_PORT:-8080}:8080"
