--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -16,22 +16,13 @@
     <description>RedScooter SpringBoot API - Build by Epoka University Students as part of SWE302 course</description>
     <properties>
         <java.version>17</java.version>
+        <restprocessor.version>0.0.32-SNAPSHOT</restprocessor.version>
     </properties>
     <dependencies>
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-data-jpa</artifactId>
         </dependency>
-        <!--		<dependency>-->
-        <!--			<groupId>org.hibernate</groupId>-->
-        <!--			<artifactId>hibernate-core</artifactId>-->
-        <!--			<version>6.1.7.Final</version>-->
-        <!--		</dependency>-->
-        <!--		<dependency>-->
-        <!--			<groupId>org.hibernate</groupId>-->
-        <!--			<artifactId>hibernate-entitymanager</artifactId>-->
-        <!--			<version>5.6.15.Final</version>-->
-        <!--		</dependency>-->
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-security</artifactId>
@@ -147,7 +138,7 @@
         <dependency>
             <groupId>grad-project.indritbreti</groupId>
             <artifactId>restprocessors</artifactId>
-            <version>0.0.27-SNAPSHOT</version>
+            <version>${restprocessor.version}</version>
             <scope>compile</scope>
         </dependency>
     </dependencies>
@@ -182,11 +173,13 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
-                <version>3.6.1</version>
+                <version>3.6.0</version>
                 <configuration>
                     <source>17</source>
                     <target>17</target>
                     <encoding>UTF-8</encoding>
+                    <fork>true</fork>
+                    <verbose>true</verbose>
                     <generatedSourcesDirectory>${project.build.directory}/restprocessors-generated-sources</generatedSourcesDirectory>
                     <annotationProcessorPaths>
                         <path>
@@ -197,14 +190,17 @@
                         <path>
                             <groupId>grad-project.indritbreti</groupId>
                             <artifactId>restprocessors</artifactId>
-                            <version>0.0.27-SNAPSHOT</version>
+                            <version>${restprocessor.version}</version>
                         </path>
                     </annotationProcessorPaths>
-                    <!--                    <annotationProcessors>-->
-                    <!--                        <annotationProcessor>-->
-                    <!--                            org.restprocessors.RestProcessor-->
-                    <!--                        </annotationProcessor>-->
-                    <!--                    </annotationProcessors>-->
+<!--                    <annotationProcessors>-->
+<!--                        <annotationProcessor>-->
+<!--                            org.restprocessors.RestProcessor-->
+<!--                        </annotationProcessor>-->
+<!--                        <annotationProcessor>-->
+<!--                            org.projectlombok.Lombok-->
+<!--                        </annotationProcessor>-->
+<!--                    </annotationProcessors>-->
                 </configuration>
             </plugin>
 
