--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,6 +10,7 @@
     "export": "openapi -i services.yaml -o src/services && next build && next export"
   },
   "dependencies": {
+    "@apollo/client": "^3.7.15",
     "@emotion/react": "^11.10.6",
     "@emotion/styled": "^11.10.6",
     "@mui/icons-material": "^5.11.16",
@@ -22,9 +23,11 @@
     "@types/react": "18.0.32",
     "@types/react-dom": "18.0.11",
     "@types/uuid": "^9.0.1",
+    "apollo-boost": "^0.4.9",
     "dayjs": "^1.11.7",
     "eslint": "8.37.0",
     "eslint-config-next": "13.2.4",
+    "graphql": "^15.8.0",
     "material-react-table": "^1.10.0",
     "next": "13.2.4",
     "next-redux-wrapper": "^8.1.0",
