--- a/production/docker-compose.yml
+++ b/production/docker-compose.yml
@@ -30,7 +30,7 @@ services:
     - ./postgresql_setup:/docker-entrypoint-initdb.d
     ports:
     - "${DATABASE_PORT:-5432}:5432"
-    command: postgres -c listen_addresses='*' 
+    # command: postgres -c listen_addresses='*' 
     restart: always
     healthcheck:
       test: ["CMD-SHELL", "pg_isready"]
