--- a/frontend/package.json
+++ b/frontend/package.json
@@ -27,6 +27,7 @@
     "dayjs": "^1.11.7",
     "eslint": "8.37.0",
     "eslint-config-next": "13.2.4",
+    "form-data": "^4.0.0",
     "graphql": "^15.8.0",
     "material-react-table": "^1.10.0",
     "next": "13.2.4",
@@ -35,6 +36,7 @@
     "openapi-typescript-codegen": "^0.23.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-dropzone": "^14.2.3",
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.10.0",
     "redux": "^4.2.1",
