--- a/frontend/package.json
+++ b/frontend/package.json
@@ -29,6 +29,7 @@
     "eslint-config-next": "13.2.4",
     "form-data": "^4.0.0",
     "graphql": "^15.8.0",
+    "jwt-decode": "^3.1.2",
     "material-react-table": "^1.10.0",
     "next": "13.2.4",
     "next-redux-wrapper": "^8.1.0",
